--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.1",
+    "@mui/material": "^5.15.7",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.2.0",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
