--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ PORT = 8080
 JWT_SECRET_KEY = "MUSIC_SERVICE_KEY"
 JWT_EXPIRES_IN = "24h"
 CRYPTO_SECRET= "MUSIC_SERVICE_SECRET"
+
+CLOUDINARY_NAME = "dgn6szubx"
+CLOUDINARY_API_KEY = "848772777348618"
+CLOUDINARY_API_SECRET = "Nllzu1iP2x_51rPVjOOeSShbCpk"
