--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "classnames": "^2.3.2",
     "crypto-js": "^4.2.0",
     "immer": "^10.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
