[BE] test: GET List, GET Detail, POST Register & POST Login

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ CRYPTO_SECRET= "MUSIC_SERVICE_SECRET"
 CLOUDINARY_NAME = "dgn6szubx"
 CLOUDINARY_API_KEY = "848772777348618"
 CLOUDINARY_API_SECRET = "Nllzu1iP2x_51rPVjOOeSShbCpk"
+
+SECRET_KEY = "MUSIC_SERVICE_SECRET"
