--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage=true --forceExit",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -15,7 +15,6 @@
     "boom": "^7.3.0",
     "cloudinary": "^2.0.0",
     "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.1",
@@ -26,8 +25,12 @@
     "mysql2": "^3.9.1"
   },
   "devDependencies": {
+    "crypto-js": "^4.2.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "sequelize": "^6.35.2",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "sequelize-mock": "^0.10.2",
+    "supertest": "^6.3.4"
   }
 }
